styles.css
/* Box sizing rules */

html {
  box-sizing: border-box;
  font-size: 1vw;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-size: clamp(16px, 1.2rem, 2.2rem);
  font-family: 'Ysabeau Office', sans-serif;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

:root {
    --main-clr-95: hsl(191, 65%, 95%);
    --main-clr-95-fade-10: hsla(191, 65%, 95%, 0.1);
    --main-clr-95-fade-85: hsla(191, 65%, 95%, 0.85);
    --secondary-clr-95: hsl(58, 95%, 95%);
    --accent-clr-95: hsl(6, 36%, 95%);
    --main-clr-60: hsl(191, 65%, 60%);
    --secondary-clr-60: hsl(58, 95%, 60%);
    --accent-clr-60: hsl(6, 65%, 60%);
    --main-clr-30: hsl(191, 25%, 30%);
    --secondary-clr-30: hsl(58, 25%, 30%);
    --accent-clr-30: hsl(6, 25%, 30%);
    --main-clr-txt: hsl(191, 45%, 5%);
    --secondary-clr-txt: hsl(58, 45%, 5%);
    --accent-clr-txt: hsl(6, 45%, 5%);

    --accent-clr-bdr: hsla(6, 25%, 30%, 0.4);
    --accent-clr-60-fade-50: hsla(6, 65%, 60%, 0.5);
    --accent-clr-98: hsl(6, 26%, 98%);
    --valid-clr-60: hsl(90, 90%, 60%)
}

.outer-wrapper {
    background: var(--main-clr-95);
    display: grid;
    grid-template-columns: 1fr 2fr;
    height: 100svh;
}

#bg-img {
    height: 100svh;
    width: 100%;
    object-fit: cover;
}

#bg-img-wrapper {
    position: relative;
    min-width: 30vw;
}

#bg-img-wrapper::after {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80%;
    width: 100%;
    top: 10%;
    z-index: 2;
    padding: 1rem 1.2rem;
    content: "The Gardening Project";
    text-align: center;
    font-family: 'Dancing Script', cursive;
    font-size: clamp(30px, 4rem, 48px);
    font-weight: 700;
    background: radial-gradient(circle at center, hsla(6, 25%, 10%, 0.8) 0%, hsla(6, 25%, 10%, 0) 90%);
    color: var(--accent-clr-95);
}

#main-form {
    width: 100%;
}

#cta {
    font-size: max(18px, 2rem);
}

.outer-right-wrapper {
    min-height: 100svh; 
    background-image: url(/dmytro-tolokonov-shrunk.jpg);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    object-fit: cover;
}

.right-wrapper {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    min-height: 100svh;
    background: linear-gradient(to left, var(--main-clr-95-fade-10) 0%, var(--main-clr-95) 80%);
}

.cta-wrapper {
    flex: 1;
    display: flex;
    align-items: end;
    padding: 0rem 2rem;
}

.form-wrapper {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem 2rem;
    background: var(--secondary-clr-95);
    box-shadow: 0 2px 5px hsl(0, 10%, 87%);
}

.login-wrapper {
    flex: 1;
    padding: 0rem 1rem;
    background: transparent;
    transition: background 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
}

.main-input-container {
    min-height: 40svh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    padding-right: 14rem;
    justify-content: left;
    gap: 0rem 0.5rem;
}

.input-container {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    font-size: 18px;
}

#motivator {
    font-size: max(2.2rem, 24px);
    font-family: 'Dancing script', cursive;
    color: var(--accent-clr-txt);
}

button {
    padding: 1rem 0.5rem;
    box-shadow: 0 2px 3px hsl(0, 10%, 87%),
                inset 0 0 1px var(--accent-clr-60);
    background: var(--accent-clr-95);
    border: 1px solid var(--accent-clr-bdr);
    border-radius: 0.5rem;
    scale: 1;
    transition: scale 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335),
                box-shadow 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
}

#create-account-btn:focus-within,
#create-account-btn:hover {
    box-shadow: 0 2px 5px hsl(0, 20%, 77%),
                inset 0 0 5px var(--accent-clr-60);
    scale: 1.1;
}

.input-container > label {
    position: relative;
    top: calc(1.4em + 0.8vw);
    left: 5px;
    color: hsla(191, 20%, 5%, 0.5);
    transition: color 300ms ease-in-out,
                top 300ms ease-in-out;
    z-index: 2;
}

.input-container:hover > label,
.input-container:focus-within > label {
    color: var(--main-clr-txt);
    top: 0.5rem;
    left: 5px;
}

.input-container input:not(:placeholder-shown) {
    background: blue;
}

input {
    position: relative;
    border: 1px solid var(--accent-clr-bdr);
    background: var(--accent-clr-98);
    padding: 0.2rem 0.5rem;
    border-radius: 0.5rem;
}

input:hover,
input:focus {
    box-shadow: inset 0 0 2px var(--accent-clr-60);
    outline: 1px solid var(--accent-clr-bdr);
}

input[required]:valid,
input[required]:valid:hover,
input[required]:valid:focus {
    border: 1px solid var(--valid-clr-60);
    box-shadow: inset 0 0 2px var(--valid-clr-60);
}

input[required]:invalid,
input[required]:invalid:hover,
input[required]:invalid:focus {
    border: 1px solid var(--accent-clr-60);
}

.highlighted {
    color: var(--accent-clr-60);
}

/* LOGIN MODAL */

.modal-container {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-image: url(/dmytro-tolokonov-shrunk.jpg);
    background-repeat: no-repeat;
    background-size: 100% auto;
    z-index: 10;
    transition: opacity 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
    overflow: hidden;
}

.modal-content {
    display: grid;
    width: 100%;
    padding: 30vw 20rem 15rem 20rem;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    justify-content: center;
    gap: 1rem;
    text-align: center;
    overflow: hidden;
}

.modal-content.fade {
    opacity: 0;
}

.modal-content > button {
    margin: 1rem 3rem;
    min-width: 150px;
}

.modal-title {
    grid-column: 1/3;
}

@media (max-aspect-ratio: 1/1), (orientation: portrait) {
    .modal-container {
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
    }
}

@media (width < 880px) {
    .main-input-container {
        grid-template-columns: repeat(1, 1fr);
        padding-right: 4vw;
    }
    .login-wrapper {
        background: var(--main-clr-95);
        transition: background 300ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
    }
    


    .right-wrapper {
        gap: 0;
    }

    #create-account-btn {
        margin-top: 2rem;
    }
}

@media (width < 840px) {
    .outer-right-wrapper {
        background-size: 100% auto;
    }
}

@media (width < 600px) {
    .main-input-container {
        padding-right: 3vw;
    }
}

@media (width < 400px) {
    #bg-img {
        height: 50svh;
    }

    #bg-img-wrapper::after {
        top: 20%;
    }

    .outer-wrapper {
        grid-template-columns: 1fr;
    }

    .right-wrapper {
        background: var(--main-clr-95-fade-85);
    }

    .cta-wrapper {
        text-align: center;
        align-items: center;
        justify-content: center;
    }

    .login-wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .main-input-container {
        grid-template-columns: repeat(1, 1fr);
        padding-right: 1vw;
    }
}

